src/objects/Survey_Target__c.object
<CustomObject>
    <fields>
        <fullName>Between_20_and_30_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Between 20 and 30 Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Between_20_and_30_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Between 20 and 30 Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Between_30_and_40_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Between 30 and 40 Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Between_30_and_40_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Between 30 and 40 Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Between_40_and_50_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Between 40 and 50 Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Between_40_and_50_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Between 40 and 50 Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Female Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Female Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Male_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Male Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Male Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_60_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Over 60 Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_60_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Over 60 Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Targets</relationshipLabel>
        <relationshipName>Survey_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Under_20_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Under 20 Collected</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_20_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Under 20 Target</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Target</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Survey Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>